JNG-4549 Add to pom.xml the missing plugins, profiles, update java version, eliminate warnings because set-output